# Agenza

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
.claude/: launch.json  settings.json  settings.local.json
.claude/agents/: agenza-architecture-reviewer.md  agenza-contract-reviewer.md  agenza-exception-auditor.md  agenza-tenant-reviewer.md
.github/: dependabot.yml
.github/workflows/: agent-governance.yml  ai-services-ci.yml  backend-ci.yml  codeql.yml  frontend-ci.yml  sonar.yml
.husky/: pre-commit
agent-skills/agenza-api-contract-review/: SKILL.md
agent-skills/agenza-backend-use-case/: SKILL.md
agent-skills/agenza-exception-flow-audit/: SKILL.md
agent-skills/agenza-frontend-feature/: SKILL.md
ai-services/assistant-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
ai-services/assistant-service/app/: main.py
ai-services/assistant-service/app/auth/: config.py  service_token_client.py  verify_token.py
ai-services/assistant-service/tests/: test_health.py  test_service_token_client.py  test_verify_token.py  test_whoami.py
backend/: AGENTS.md  AdminBackend.slnx  CLAUDE.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  README.md
docs/: AGENT-GOVERNANCE.md  HARDENING_REPORT.md  MONOREPO.md  QUALITY.md  SDD-GUIDE.md  VISION.md
infra/: docker-compose.yml
prompts/: agent-task-template.md  architecture-review-template.md  backend-feature-template.md  frontend-feature-template.md  frontend-refactor-comments-componentization.md  frontend-typescript-react-type-modeling.md
scripts/: architecture_guard.py  check_agent_governance.py  claude_stop_guard.py  sync_agent_skills.py
(+800 files in other folders)
