[project]
name = "assistant-service"
version = "0.1.0"
description = "Placeholder AI assistant service (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=5.0", "ruff>=0.8"]

[tool.ruff]
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
# Defaults (E4/E7/E9/F) plus import sorting, bugbear, and pyupgrade -
# keeps the linter useful without fighting FastAPI idioms.
extend-select = ["I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
